Closed Bug 1427546 Opened 8 years ago Closed 2 years ago

"View > Threads > Unread" not functioning (see comment #5), was: Single message shows as unexpandable thread in message list

Categories

(Thunderbird :: Folder and Message Lists, defect)

52 Branch
defect

Tracking

(thunderbird_esr115? fixed, thunderbird124? affected)

RESOLVED FIXED
125 Branch
Tracking Status
thunderbird_esr115 ? fixed
thunderbird124 ? affected

People

(Reporter: mozilla, Assigned: welpy-cw)

References

Details

Attachments

(4 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/63.0.3239.84 Safari/537.36 Steps to reproduce: Read a single message (version 52.5.2 - release channel) Actual results: Single message shows in message list as a thread with the same message occurring twice. It is not possible to expand this thread and thus not possible to read the message. This does not always happen, but happens frequently. Expected results: Message should not have been shown as a thread, but rather as a single message in a thread (without children). It is possible this is the same as Bug 876165, but that bug is over 5 years old.
Well, in the screenshot it looks like two messages, but if you supply the message or better the mailbox ("Attach File" above) we're happy to investigate. Does this happen with add-ons disabled (see Help menu)?
I'm not sure how to get the mailbox to attach it. I'm using Dovecot on my server with the Maildir format. I've tracked this down further and it is pretty simple to reproduce. I have a read message in a folder. When a single reply to that message comes in, I see the problem when I am sorting "Threaded" and Threads are set to "Unread". If I change Threads to "All", then I see the two messages (the original read message and the child unread message) correctly with the correct threading. When I switch Threads to "Unread", then I don't see the root message, only the unread child, but it shows up as if it were two messages with no way to expand the thread (as in the image). I'm not sure if the problem happens in an Inbox or only when I have the messages in a subfolder. I don't thread my Inbox, only email lists in subfolders.
It appears that the thread can be expanded, but it cannot, which is the main issue.
Confirmed. You don't even need to wait for a new message in the thread to come in, you can just take any (short) thread and set one message to unread. If you then select "View > Threads > Unread" from the menu, the system starts to misbehave. There is no way to expand the thread, you just get the summary in the preview pane. It gets worse, if you double-click the un-expandable thread, tabs for each message open (that's why I said to use a short thread), and the last tab doesn't have a header :-( That's seriously not working in a very useful fashion. That's already not working in TB 45 (ancient), I didn't check back further. Magnus, what do you make of this? There appear to be a whole heap of bugs matching "thread unread".
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: Single message shows as unexpandable thread in message list → "View > Threads > Unread" not functioning (see comment #5), was: Single message shows as unexpandable thread in message list
Severity: normal → S3

When all children of a thread are ignored subthreads, or, in unread only view, an unread top thread
message has read children only, just the message summary is shown. Neither trying to expand the
thread, nor clicking on a message in the summary displays the top message itself. This fixes both.

Assignee: nobody → h.w.forms
Status: NEW → ASSIGNED
See Also: → 1838583
Target Milestone: --- → 125 Branch

Pushed by ikey@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/b69f96d2b65f
Fix expanding threads with invisible children only. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
See Also: → 1854670

Comment on attachment 9380758 [details]
Bug 1427546 - Fix expanding threads with invisible children only. r=#thunderbird-reviewers

[Approval Request Comment]
User impact if declined: the content of threads consisting of just one message (for example in "Threads with unread" mode) cannot be displayed.
Testing completed (on c-c, etc.): yes
Risk to taking this patch (and alternatives if risky): practically none

Attachment #9380758 - Flags: approval-comm-esr115?

Comment on attachment 9380758 [details]
Bug 1427546 - Fix expanding threads with invisible children only. r=#thunderbird-reviewers

[Triage Comment]
Approved for esr115

Attachment #9380758 - Flags: approval-comm-esr115? → approval-comm-esr115+
Duplicate of this bug: 1854670
Duplicate of this bug: 876165
See Also: → 876165
See Also: 876165
Duplicate of this bug: 606755
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: